argocd/infra/system-upgrade-controller/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-upgrade
spec:
  endpointSelector: {}
  ingress: []
  egress:
    - toCIDR:
        - 192.168.10.44/32
        - 192.168.10.55/32
        - 192.168.10.66/32
        - 192.168.10.100/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
